--- a/headers.html
+++ b/headers.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Fifty Boilerplate Static</title>
+  <title>Kristina Vanderslice Portfolio</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,13 +22,28 @@
   <script src="../components/prefix-free/prefixfree.min.js"></script>
   
   <!-- Typekit -->
-  <link rel="stylesheet" href="https://use.typekit.net/pzv0cne.css">
+<!--   <link rel="stylesheet" href="https://use.typekit.net/pzv0cne.css"> -->
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700" rel="stylesheet">
+
 
 
 </head>
 <body class="">
   
 	<div id="app" class=""> 
+
+    <div class="toggle--wrapper">
+      <button type="button" role="button" aria-label="Toggle Navigation" class="menu--toggle" href="#"><span></span></button>
+    </div>
+
+    <header class="header" id="header">
+      <h1 class="large">Menu</h1>
+      <ul class="menu">
+        <li><a href="#about">About</a></li>
+        <li><a href="#portfolio">Portofolio</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </header>
 
  
 
@@ -37,14 +52,14 @@
 
 	<div id="modals"></div>  
 
-
+<!-- 
 	<section class="footer" id="footer">
 		<div class="anchor--links">
 			<a href="#portfolio" class="btn--link">Portfolio</a>
 			<a href="#about" class="btn--link">About</a>
 			<a href="#contact" class="btn--link">Contact</a>
 		</div>
-	</section>
+	</section> -->
 
 	</div><!-- #app -->
 
