--- a/src/index.tpl.html
+++ b/src/index.tpl.html
@@ -4,8 +4,116 @@
   "header_class"       : "header--default"
 })
 
-
 <section class="hero">
+	<div class="hero--spacer"></div>
+	<div class="hero--inner">
+		<div class="content--wrapper">
+			<div class="header--wrapper">
+				<h2 class="large">Hello</h2>
+				<h2 class="heading">Hello</h2>
+			</div>
+			<div class="intro--wrapper">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit debitis dicta ipsum consectetur officia modi at obcaecati, perspiciatis libero pariatur ratione. Vero provident consequuntur necessitatibus culpa dolorum error, optio eaque.</p>
+			</div>
+		</div>
+		<div class="img--wrapper">
+			<img src="/assets/images/kristina-bw.jpg" alt="">
+		</div>
+	</div>
+</section>
+
+
+<section class="section--about">
+	<div class="about--inner container">
+		<div class="header--wrapper">
+			<div class="header--inner">
+				<h2 class="large">About</h2>
+				<h2 class="heading">About</h2>
+			</div>
+		</div>
+		<div class="intro--wrapper">
+			<p class="large">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat eveniet omnis quasi, obcaecati at repellat consequatur architecto accusamus sint, quae quis voluptas. Laboriosam recusandae perferendis dolore.</p>
+		</div>
+	</div>
+</section>
+
+
+<section class="section--portfolio">
+	<div class="portfolio--inner container">
+		<div class="header--wrapper">
+			<h2 class="large">Portfolio</h2>
+			<h2 class="heading">Portfolio</h2>
+		</div>
+		<div class="content--wrapper">
+			<p class="subheading">Lorem ipsum dolor sit amet</p>
+			<div class="portfolio--card">
+				<div class="card--inner">
+					<div class="inner--left">
+						<h4>United Way Bay Area, Lead Developer</h4>
+						<p class="small">HTML | CSS | JAVASCRIPT | WORDPRESS</p>
+					</div>
+					<div class="inner--right">
+						<a href="#">View</a>
+					</div>
+				</div>
+			</div>
+			<div class="portfolio--card">
+				<div class="card--inner">
+					<div class="inner--left">
+						<h4>United Way Bay Area, Lead Developer</h4>
+						<p class="small">HTML | CSS | JAVASCRIPT | WORDPRESS</p>
+					</div>
+					<div class="inner--right">
+						<a href="#">View</a>
+					</div>
+				</div>
+			</div>
+			<div class="portfolio--card">
+				<div class="card--inner">
+					<div class="inner--left">
+						<h4>United Way Bay Area, Lead Developer</h4>
+						<p class="small">HTML | CSS | JAVASCRIPT | WORDPRESS</p>
+					</div>
+					<div class="inner--right">
+						<a href="#">View</a>
+					</div>
+				</div>
+			</div>
+			<div class="portfolio--card">
+				<div class="card--inner">
+					<div class="inner--left">
+						<h4>United Way Bay Area, Lead Developer</h4>
+						<p class="small">HTML | CSS | JAVASCRIPT | WORDPRESS</p>
+					</div>
+					<div class="inner--right">
+						<a href="#">View</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+
+<section class="section--contact">
+	<div class="contact--inner container">
+		<div class="header--wrapper">
+			<h2 class="large">Contact</h2>
+			<h2 class="heading">Contact</h2>
+		</div>
+		<div class="intro--wrapper">
+			<p class="">To get in touch, email at <a href="mailto:kmvanderslice@gmail.com">kmvanderslice@gmail.com</a></p>
+			<div class="social">
+				<a href=""><i class="fa fa-linkedin"></i></a>
+				<a href=""><i class="fa fa-github"></i></a>
+				<a href=""><i class="fa fa-twitter"></i></a>
+			</div>
+		</div>
+	</div>
+</section>
+
+<!-- Second design -->
+<!-- <section class="hero">
 	<h1 class="large">Hello</h1>
 </section>
 
@@ -13,11 +121,6 @@
 	<div class="opening--left">
 		<h2>I'm Kristina,</h3>
 		<h3>A FrontEnd Developer <br>who loves great design, <br>clean code, usable websites, <br>and making an impact.</h3>
-<!-- 		<ul class="links">
-			<li><a href="#about">About</a></li>
-			<li><a href="#portfolio">Portfolio</a></li>
-			<li><a href="#contact">Contact</a></li>
-		</ul> -->
 	</div>
 	<div class="opening--right">
 		<img src="/assets/images/kristina-bw.jpg" alt="">
@@ -51,7 +154,7 @@
 		</a>
 	</div>
 </section>
-	
+	 -->
 <!-- original design -->
 
 <!-- <section class="hero">
