update card style

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				<h2 class="heading">Hello</h2>
 			</div>
 			<div class="intro--wrapper">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit debitis dicta ipsum consectetur officia modi at obcaecati, perspiciatis libero pariatur ratione. Vero provident consequuntur necessitatibus culpa dolorum error, optio eaque.</p>
+				<p>I'm Kristina, a developer with a passion for all things front-end. I'm currently working as a web enginner in San Diego, Ca.</p>
 			</div>
 		</div>
 		<div class="img--wrapper">
@@ -75,13 +75,13 @@
 			</div>
 		</div>
 		<div class="intro--wrapper">
-			<p class="large">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat eveniet omnis quasi, obcaecati at repellat consequatur architecto accusamus sint, quae quis voluptas. Laboriosam recusandae perferendis dolore.</p>
+			<p class="large">I am passionate about building creative, usable, and engaging websites that make an impact. As a web engineer with an emphasis on front-end development, I am experienced in hand-coding sites utilizing HTML, SCSS/CSS, Javascript, and PHP.</p>
 		</div>
 	</div>
 </section>
 
 
-<section class="section--portfolio">
+<!-- <section class="section--portfolio">
 	<div class="portfolio--inner container">
 		<div class="header--wrapper">
 			<h2 class="large">Portfolio</h2>
@@ -135,7 +135,111 @@
 			</div>
 		</div>
 	</div>
+</section> -->
+
+
+<section class="section--portfolio-alt">
+	<div class="portfolio--inner container">
+		<div class="header--wrapper">
+			<h2 class="large">Portfolio</h2>
+			<h2 class="heading">Portfolio</h2>
+		</div>
+
+		<div class="content--wrapper">
+			
+			<div class="portfolio--card">
+				<div class="card--inner">
+					<h4>United Way Bay Area</h4>
+					<h6>Lead Developer</h6>
+					<hr>
+					<p class="alt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi minus doloribus placeat, animi id mollitia ipsam iste vitae suscipit quisquam aut modi alias similique nostrum repellendus, in consectetur perspiciatis pariatur.</p>
+					<a class="btn">View Site</a>
+				</div>
+			</div>
+
+			<div class="portfolio--card">
+				<div class="card--inner">
+					<h4>Lifestraw </h4>
+					<h6>Lead Developer</h6>
+					<hr>
+					<p class="alt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi minus doloribus placeat, animi id mollitia ipsam iste vitae suscipit quisquam aut modi alias similique nostrum repellendus, in consectetur perspiciatis pariatur.</p>
+					<a class="btn">View Site</a>
+				</div>
+			</div>
+
+			<div class="portfolio--card">
+				<div class="card--inner">
+					<h4>Qualcomm Power of Nine</h4>
+					<h6>Lead Developer</h6>
+					<hr>
+					<p class="alt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi minus doloribus placeat, animi id mollitia ipsam iste vitae suscipit quisquam aut modi alias similique nostrum repellendus, in consectetur perspiciatis pariatur.</p>
+					<a class="btn">View Site</a>
+				</div>
+			</div>
+
+			<div class="portfolio--card">
+				<div class="card--inner">
+					<h4>Hope Chapel</h4
+					<h6>Lead Developer</h6>
+					<hr>
+					<p class="alt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi minus doloribus placeat, animi id mollitia ipsam iste vitae suscipit quisquam aut modi alias similique nostrum repellendus, in consectetur perspiciatis pariatur.</p>
+					<a class="btn">View Site</a>
+				</div>
+			</div>
+
+
+		</div>
+	</div>
 </section>
+
+
+
+
+<!-- 			<div class="portfolio--card">
+				<div class="card--inner">
+					<div class="inner--left">
+						<h4>United Way Bay Area, Lead Developer</h4>
+						<p class="small">HTML | CSS | JAVASCRIPT | WORDPRESS</p>
+					</div>
+					<div class="inner--right">
+						<a href="#">View</a>
+					</div>
+				</div>
+			</div>
+			<div class="portfolio--card">
+				<div class="card--inner">
+					<div class="inner--left">
+						<h4>United Way Bay Area, Lead Developer</h4>
+						<p class="small">HTML | CSS | JAVASCRIPT | WORDPRESS</p>
+					</div>
+					<div class="inner--right">
+						<a href="#">View</a>
+					</div>
+				</div>
+			</div>
+			<div class="portfolio--card">
+				<div class="card--inner">
+					<div class="inner--left">
+						<h4>United Way Bay Area, Lead Developer</h4>
+						<p class="small">HTML | CSS | JAVASCRIPT | WORDPRESS</p>
+					</div>
+					<div class="inner--right">
+						<a href="#">View</a>
+					</div>
+				</div>
+			</div>
+			<div class="portfolio--card">
+				<div class="card--inner">
+					<div class="inner--left">
+						<h4>United Way Bay Area, Lead Developer</h4>
+						<p class="small">HTML | CSS | JAVASCRIPT | WORDPRESS</p>
+					</div>
+					<div class="inner--right">
+						<a href="#">View</a>
+					</div>
+				</div>
+			</div> -->
+
 
 
 <section class="section--contact">
@@ -145,7 +249,7 @@
 			<h2 class="heading">Contact</h2>
 		</div>
 		<div class="intro--wrapper">
-			<p class="">To get in touch, email at <a href="mailto:kmvanderslice@gmail.com">kmvanderslice@gmail.com</a></p>
+			<p class="">To get in touch, email at me<a href="mailto:kmvanderslice@gmail.com">kmvanderslice@gmail.com</a></p>
 			<div class="social">
 				<a href=""><i class="fa fa-linkedin"></i></a>
 				<a href=""><i class="fa fa-github"></i></a>
@@ -154,7 +258,6 @@
 		</div>
 	</div>
 </section>
-
 <!-- Second design -->
 <!-- <section class="hero">
 	<h1 class="large">Hello</h1>
