--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
 			<div class="row">
 				<div class="col-md-6 big-letter">
 					<p>
-						As a web engineer I am passionate about building creative websites. With Fifty and Fifty I had the opportunity to development 25+ websites, microsites and landing pages for clients in the nonprofit and social good community, and currently work .
+						Combining skills in project management, graphic design, and web development I am able to deliver on the technical and creative needs of projects while effectively managing the scope, timeline, and requirements. In my time as a web engineer with Fifty and Fifty I had the opportunity to development 25+ websites, microsites and landing pages for clients in the nonprofit and social good community, and transferred what I learned there to building creative and usable sites as a freelancer.
 					</p>
-					<br>
+<!-- 					<br>
 					<p>
 						I'm currently utilizing HTML, CSS/SCSS, JavaScript, jQuery, GSAP, MySQL, Git, Gulp, WordPress, PHP and Shopify. I am studying React in my free time. 
-					</p>
+					</p> -->
 				</div>
 				<div class="col-md-6">
 					<p>
