copy updates about

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8">
-					<p>Hello, I'm Kristina a freelance web designer & developer, project manager, and instructor. Currently managing projects across a wide range of digital and print needs at <i>Smashtech</i>. Previously with <i><a href="https://fiftyandfifty.org/" class="contact--link" target="_blank" rel="noreffer noopener"> Fifty and Fifty</a></i>, where I worked on projects for clients including Qualcomm, Susan G. Komen, ICRC, LifeStraw, Wildcoast, United Way Bay Area and PSI.</p>
+					<p>Hello, I'm Kristina a freelance web designer & developer, project manager, and instructor. Currently managing projects across a wide range of digital and print needs at <i>Smashtech</i>. Previously with <i><a href="https://fiftyandfifty.org/" class="contact--link" target="_blank" rel="noreffer noopener"> Fifty and Fifty</a></i>, where I worked as a developer on projects for clients including Qualcomm, Susan G. Komen, ICRC, LifeStraw, Wildcoast, United Way Bay Area and PSI.</p>
 				</div>
 			</div>
 		</div>
@@ -86,14 +86,10 @@
 					<p>
 						Combining skills in project management, graphic design, and web development I am able to deliver on the technical and creative needs of projects while effectively managing the scope, timeline, and requirements. In my time as a web engineer with Fifty and Fifty I had the opportunity to development 25+ websites, microsites and landing pages for clients in the nonprofit and social good community, and transferred what I learned there to building creative and usable sites as a freelancer.
 					</p>
-<!-- 					<br>
-					<p>
-						I'm currently utilizing HTML, CSS/SCSS, JavaScript, jQuery, GSAP, MySQL, Git, Gulp, WordPress, PHP and Shopify. I am studying React in my free time. 
-					</p> -->
+
 				</div>
 				<div class="col-md-6">
-					<p>
-						My interest in web development also spans to my time outside of work, as I am a club faciliator with <i><a href="https://girlswhocode.com/" target="_blank" rel="noreferer noopener">Girls Who Code</a></i>, teaching young women skills in computer science and sisterhood as well as a gold project advisor for <i><a href="https://www.girlscouts.org/en/our-program/highest-awards/gold-award.html" target="_blank" rel="noreferer noopener">Girls Scouts</a></i> where I am working with a Girl Scout to build resources for women interested in learning computer science and coding. Prior to my current career I was a full time <i><a href="https://kristinavanderslice.zenfolio.com/" target="_blank" rel="noopener noreffer">photographer</a></i> and now use that skill to volunteer with <i><a href="https://sandiego.wish.org/" target="_blank" rel="noopener noreffer">Make-A-Wish Foundation</a></i> as a wish and event photographer.
+					<p>My interest in web development also spans to my time outside of work, as an instructor teaching web development and CMS at <i>UCSD Extension</i>, a club faciliator with <i>Girls Who Code</i>, teaching young women skills in computer science and sisterhood and a gold project advisor for <i>Girls Scouts</i>, working with a Girl Scout to build resources for girls interested in learning computer science and coding. Prior to my current career I was a full time photographer and now use that skill to volunteer with <i>Make-A-Wish Foundation</i> as a wish and event photographer.
 					</p>
 					<br>
 				</div>
