final copy adjustment

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8">
-					<p>Hello, I'm Kristina a freelance web designer & developer, project manager, and instructor. Currently managing projects across a wide range of digital and print needs at <i>Smashtech</i>. Previously with <i><a href="https://fiftyandfifty.org/" class="contact--link" target="_blank" rel="noreffer noopener"> Fifty and Fifty</a></i>, where I worked as a developer on projects for clients including Qualcomm, Susan G. Komen, ICRC, LifeStraw, Wildcoast, United Way Bay Area and PSI.</p>
+					<p>Hello, I'm Kristina a freelance web designer & developer, project manager, and instructor. Currently managing projects across a wide range of digital and print needs at <i>Smashtech</i>. Previously with <i><a href="https://fiftyandfifty.org/" class="contact--link" target="_blank" rel="noreffer noopener"> Fifty and Fifty</a></i>, where I worked as a developer on websites for clients including Qualcomm, Susan G. Komen, ICRC, LifeStraw, Wildcoast, United Way Bay Area and PSI.</p>
 				</div>
 			</div>
 		</div>
