--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			<div class="row">
 				<div class="col-lg-8">
 <!-- 					<p>Hello, I'm Kristina a freelance web designer & developer, project manager, and instructor. Currently managing projects across a wide range of digital and print needs at <i>Smashtech</i>. Previously with <i><a href="https://fiftyandfifty.org/" class="contact--link" target="_blank" rel="noreffer noopener"> Fifty and Fifty</a></i>, where I worked as a developer on websites for clients including Qualcomm, Susan G. Komen, ICRC, LifeStraw, Wildcoast, United Way Bay Area and PSI.</p> -->
-					<p>Hello, I'm Kristina a Web Developer, Photographer, and Instructor. Currently with <i>Cordial</i>, building sites and applications as part of the Marketing team. Previously with <i><a href="https://fiftyandfifty.org/" class="contact--link" target="_blank" rel="noreffer noopener"> Fifty and Fifty</a></i>, where I worked as a developer on websites for clients including Qualcomm, Susan G. Komen, ICRC, LifeStraw, Wildcoast, United Way Bay Area and PSI.</p>
+					<p>Hello, I'm Kristina a Web Developer, Graphic Designer, Photographer, and Instructor. Currently with <i>Cordial</i>, overseeing design and development as part of the Marketing team. Previously with <i><a href="https://fiftyandfifty.org/" class="contact--link" target="_blank" rel="noreffer noopener"> Fifty and Fifty</a></i>, where I worked as a developer on websites for clients including Qualcomm, Susan G. Komen, ICRC, LifeStraw, Wildcoast, United Way Bay Area and PSI.</p>
 				</div>
 			</div>
 		</div>
@@ -85,7 +85,7 @@
 			<div class="row">
 				<div class="col-md-6 big-letter">
 					<p>
-						Combining skills in project management, graphic design, and web development I am able to deliver on the technical and creative needs of projects while effectively managing the scope, timeline, and requirements. In my time as a web engineer with Fifty and Fifty I had the opportunity to development 25+ websites, microsites and landing pages for clients in the nonprofit and social good community, and transferred what I learned there to building creative and usable sites as a freelancer.
+						Combining skills in graphic design, web development, and project management I am able to deliver on the technical and creative needs of projects while effectively managing the scope, timeline, and requirements. In my time as a web engineer with Fifty and Fifty I had the opportunity to development 25+ websites, microsites and landing pages for clients in the nonprofit and social good community, and transferred what I learned there to building creative and usable sites as a freelancer.
 					</p>
 
 				</div>
@@ -173,8 +173,8 @@
 						 
 					<h3>Contact</h3>
 					<p class="contact-p"><a class="contact--link" href="https://www.linkedin.com/in/kristina-vanderslice-a5928689/" target="_blank" rel="noreffer noopener">LinkedIn</a></p>
-					<p class="contact-p"><a class="contact--link" href="mailto:kmvanderslice@gmail.com">kmvanderslice@gmail.com</a></p>
-					<p class="contact-p"><a class="contact--link" href="/img/Kristina_Vanderslice_Resume.pdf" target="_blank" rel="noreffer noopener">Resume</a></p>
+<!-- 					<p class="contact-p"><a class="contact--link" href="mailto:kmvanderslice@gmail.com">kmvanderslice@gmail.com</a></p> -->
+<!-- 					<p class="contact-p"><a class="contact--link" href="/img/Kristina_Vanderslice_Resume.pdf" target="_blank" rel="noreffer noopener">Resume</a></p> -->
 				</div>
 
 			</div>
